Added links to My About page

--- a/index.html
+++ b/index.html
@@ -28,11 +28,11 @@
 
 			<div class="container">
 				<img src="./images/Amodoi.jpg" alt="Amodoi" style="width:100%;">
-				<div class="content">
-					<span class="1">Hello,</span>
-					<h2 class="2">I'm <span>Amodoi Peter</span></h2>
+				 <div class="content">
+					    <span class="1">Hello,</span>
+					    <h2 class="2">I'm <span>Amodoi Peter</span></h2>
         			<p><h2 class="3">A Freelance Web Developer From Kenya</h2></p>
-				</div>
+				  </div>
 			</div>
 
 
@@ -42,11 +42,13 @@
    			</div> -->
 				    <div class="column">
 				          <h1>About Me</h1>
-        			     <p>I'm a tech enthusiaste who beleaves in Turning dreams into reality to safeguard and improve the lives of people on this planet</p>
-					         <h3>Web Design</h3>
-		 			         <p>Committed to delivering effective websites which offer user balance between visual appeal and informative content.</p>
+        			     <p>I'm Currently a student at Moringa School, Pursuing a course in software Development</p>
+					         <h3>Web Development</h3>
+		 			         <p>Committed to gaining knowledge to create effective websites which offer user balance between visual appeal and informative content.</p>
+                   <p>For a start, I was able to create <a href="https://amodoipeter.github.io/my-first-webpage/">My first web page</a>, and <a href="https://amodoipeter.github.io/my-peet">My Pet page</a> with a little guidance from Moringa School</p>
 		 			         <h3>Web Aplication</h3>
 		 			         <p>I design web applications that are compatible with any device and offer a great experience.</p>
+
     			   </div>
         </div>
 
@@ -65,11 +67,11 @@
 					<progress value="75" max="100" style="width: 80%;"> 75% </progress>
 				</div>
 				<div class="Skills">
-					<label for="file"><h3>JQuery(60%)</h3></label>
-					<progress value="60" max="100" style="width: 80%;"> 60% </progress>
+					<label for="file"><h3>Github(90%)</h3></label>
+					<progress value="90" max="100" style="width: 80%;"> 60% </progress>
 					<label for="file"><h3>CSS3(90%)</h3></label>
 					<progress value="90" max="100" style="width: 80%;"> 90% </progress>
-					<label for="file"><h3>SEO(80%)</h3></label>
+					<label for="file"><h3>JavaScript(80%)</h3></label>
 					<progress value="80" max="100" style="width: 80%;"> 80% </progress>
 				</div>
   		</div>
