--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         			     <p>I'm Currently a student at Moringa School, Pursuing a course in software Development</p>
 					         <h3>Web Development</h3>
 		 			         <p>Committed to gaining knowledge to create effective websites which offer user balance between visual appeal and informative content.</p>
-                   <p>For a start, I was able to create <a href="https://amodoipeter.github.io/my-first-webpage/">My first web page</a>, and <a href="https://amodoipeter.github.io/my-peet">My Pet page</a> with a little guidance from Moringa School</p>
+                   <p>For a start, I was able to create <a href="https://amodoipeter.github.io/my-first-webpage/">My first web page</a>, <a href="https://amodoipeter.github.io/my-peet">My Pet page</a>, and <a href="https://amodoipeter.github.io/my-cv/">My CV</a> with a little guidance from Moringa School</p>
 		 			         <h3>Web Aplication</h3>
 		 			         <p>I design web applications that are compatible with any device and offer a great experience.</p>
 
