styled the about page

--- a/index.html
+++ b/index.html
@@ -4,12 +4,13 @@
 		<meta charset="utf-8">
 		<link rel="stylesheet" type="text/css" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="bootstrap/css/bootstrap.css">
 		<link rel="stylesheet" type="text/css" href="index.css">
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 		<title>PETER</title>
 	</head>
 	<body>
-		<div class="header container-fluid">
+		<div class="container">
 
 			<a class="navbar-brand" href="index.html">PETER</a>
 	      	<div class="nav">
@@ -36,21 +37,18 @@
 			</div>
 
 
-			<div class="row">
-				<!-- <div class="column">
-				      <img src="./images/Amodoi.jpg" alt="Amodoi" style="width:100%">
-   			</div> -->
-				    <div class="column">
+			<!-- <div class="row"> -->
+
+				    <div class="about">
 				          <h1>About Me</h1>
         			     <p>I'm Currently a student at Moringa School, Pursuing a course in software Development</p>
 					         <h3>Web Development</h3>
 		 			         <p>Committed to gaining knowledge to create effective websites which offer user balance between visual appeal and informative content.</p>
-                   <p>For a start, I was able to create <a href="https://amodoipeter.github.io/my-first-webpage/">My first web page</a>, <a href="https://amodoipeter.github.io/my-peet">My Pet page</a>, <a href="https://amodoipeter.github.io/my-cv/">My CV</a>, <a href="https://amodoipeter.github.io/floats/">floats</a>, <a href="https://amodoipeter.github.io/Band/">my favorite band</a>, <a href="https://amodoipeter.github.io/box-model/">The box model</a> and <a href="https://amodoipeter.github.io/media-queries/">Media Queries</a> with a little guidance from Moringa School</p>
+  <p>For a start, I was able to create <a href="https://amodoipeter.github.io/my-first-webpage/">My first web page</a>, <a href="https://amodoipeter.github.io/my-peet">My Pet page</a>, <a href="https://amodoipeter.github.io/my-cv/">My CV</a>, <a href="https://amodoipeter.github.io/floats/">floats</a>, <a href="https://amodoipeter.github.io/Band/">my favorite band</a>, <a href="https://amodoipeter.github.io/box-model/">The box model</a> and <a href="https://amodoipeter.github.io/media-queries/  ">Media Queries</a> with a little guidance from Moringa School</p>
 		 			         <h3>Web Aplication</h3>
 		 			         <p>I design web applications that are compatible with any device and offer a great experience.</p>
 
     			   </div>
-        </div>
 
 
 
