--- a/index.html
+++ b/index.html
@@ -37,19 +37,24 @@
 			</div>
 
 
-			<!-- <div class="row"> -->
 
 				    <div class="about">
 				          <h1>About Me</h1>
         			     <p>I'm Currently a student at Moringa School, Pursuing a course in software Development</p>
 					         <h3>Web Development</h3>
 		 			         <p>Committed to gaining knowledge to create effective websites which offer user balance between visual appeal and informative content.</p>
-  <p>For a start, I was able to create <a href="https://amodoipeter.github.io/my-first-webpage/">My first web page</a>, <a href="https://amodoipeter.github.io/my-peet">My Pet page</a>, <a href="https://amodoipeter.github.io/my-cv/">My CV</a>, <a href="https://amodoipeter.github.io/floats/">floats</a>, <a href="https://amodoipeter.github.io/Band/">my favorite band</a>, <a href="https://amodoipeter.github.io/box-model/">The box model</a> and <a href="https://amodoipeter.github.io/media-queries/  ">Media Queries</a> with a little guidance from Moringa School</p>
+  <p>For a start, I was able to create</p>:<br>
+  <p><a href="https://amodoipeter.github.io/my-first-webpage/">My first web page</a></p>
+  <p><a href="https://amodoipeter.github.io/my-peet">My Pet page</a></p>
+  <p><a href="https://amodoipeter.github.io/my-cv/">My CV</a></p>
+  <p><a href="https://amodoipeter.github.io/floats/">floats</a></p>
+  <p><a href="https://amodoipeter.github.io/Band/">my favorite band</a></p>
+  <p><a href="https://amodoipeter.github.io/box-model/">The box model</a></p>
+  <p><a href="https://amodoipeter.github.io/media-queries/">Media Queries</a></p>
 		 			         <h3>Web Aplication</h3>
 		 			         <p>I design web applications that are compatible with any device and offer a great experience.</p>
 
     			   </div>
-
 
 
 
