Add description to the links in the About me section

--- a/index.html
+++ b/index.html
@@ -43,14 +43,28 @@
         			     <p>I'm Currently a student at Moringa School, Pursuing a course in software Development</p>
 					         <h3>Web Development</h3>
 		 			         <p>Committed to gaining knowledge to create effective websites which offer user balance between visual appeal and informative content.</p>
-  <p>For a start, I was able to create</p>:<br>
-  <p><a href="https://amodoipeter.github.io/my-first-webpage/">My first web page</a></p>
-  <p><a href="https://amodoipeter.github.io/my-peet">My Pet page</a></p>
-  <p><a href="https://amodoipeter.github.io/my-cv/">My CV</a></p>
-  <p><a href="https://amodoipeter.github.io/floats/">floats</a></p>
-  <p><a href="https://amodoipeter.github.io/Band/">my favorite band</a></p>
-  <p><a href="https://amodoipeter.github.io/box-model/">The box model</a></p>
-  <p><a href="https://amodoipeter.github.io/media-queries/">Media Queries</a></p>
+  <p>With guidance from Moringa School, I was able to create:</p>
+  <p><a href="https://amodoipeter.github.io/my-first-webpage/">My first web page</a>
+    for practicing creating web pages for the first time
+  </p>
+  <p><a href="https://amodoipeter.github.io/my-peet">My Pet page</a>
+    A page that features my favorite pet.
+  </p>
+  <p><a href="https://amodoipeter.github.io/my-cv/">My CV</a>
+    A page that entails my skills amd experiences including my educational background.
+  </p>
+  <p><a href="https://amodoipeter.github.io/floats/">floats</a>
+    A web page that I created to pracice more on floats.
+  </p>
+  <p><a href="https://amodoipeter.github.io/Band/">my favorite band</a>
+    A page that features my favorite band.
+  </p>
+  <p><a href="https://amodoipeter.github.io/box-model/">The box model</a>
+    A web page I created to practice more on the box model.
+  </p>
+  <p><a href="https://amodoipeter.github.io/media-queries/">Media Queries</a>
+    A web page that I created to practice more on media queries.
+  </p>
 		 			         <h3>Web Aplication</h3>
 		 			         <p>I design web applications that are compatible with any device and offer a great experience.</p>
 
