Added a link to my linkedin profile

--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
 	       <div class="footer">
 		         <div class="part">
 			           <h3>Find me on social media</h3>
-				          <a class="active" a href="#"><i class="fa fa-fw fa-linkedin"></i></a>
+				          <a class="active" a href="https://www.linkedin.cn/in/amodoi-peter-13188b157/"><i class="fa fa-fw fa-linkedin"></i></a>
 				           <a class="active" href="#"><i class="fa fa-fw fa-facebook"></i></a>
 		          </div>
 		          <div class="part">
