Added a link to the About section

--- a/index.html
+++ b/index.html
@@ -65,6 +65,9 @@
   <p><a href="https://amodoipeter.github.io/media-queries/">Media Queries</a>
     A web page that I created to practice more on media queries.
   </p>
+  <p><a href="https://amodoipeter.github.io/Akhan-names/">Akan Names</a>
+    A website that displays the day of the week a user was born.
+  </p>
 		 			         <h3>Web Aplication</h3>
 		 			         <p>I design web applications that are compatible with any device and offer a great experience.</p>
 
