Added the footer section with a link to the project

--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
 			</div>
 		  </div>
 
-      <footer>
+      <!-- <footer> -->
 	       <div class="footer">
 		         <div class="part">
 			           <h3>Find me on social media</h3>
@@ -164,8 +164,13 @@
 			                        <p><a href="#"><i class="fa fa-fw fa-phone"></i>+254797436731</a></p>
 		                   </div>
 	            </div>
-	       </footer>
+	       <!-- </footer> -->
        </div>
 
 	</body>
+  <footer>
+    <div class="container text-muted text-center py-3 mt-5">
+        <h5>Copyright &copy; 2020 | <a href="https://github.com/amodoipeter/amodoi-peter">Amodoi Peter</a></h5>
+    </div>
+</footer>
 </html>
